<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.Full_detailFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint_layput"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_175sdp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true">

        <com.pierfrancescosoffritti.androidyoutubeplayer.core.player.views.YouTubePlayerView
            android:id="@+id/youtube_player"
            autoPlay="false"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/poster_iv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/poster_bg"
            android:contentDescription="@string/play"
            android:scaleType="fitXY"
            app:layout_constraintBottom_toBottomOf="@+id/youtube_player"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/youtube_player"
            app:layout_constraintTop_toTopOf="@+id/youtube_player" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nested_sv_"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/constraint_layput"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/dark_gray"
            android:orientation="vertical"
          >

            <TextView
                android:id="@+id/title_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/chrusty"
                android:layout_marginStart="@dimen/_10sdp"
                android:paddingTop="@dimen/_10sdp"
                android:paddingBottom="@dimen/_10sdp"
                android:text="@string/jurssic_world_dominion"
                android:textColor="@color/text_primary"
                android:textSize="@dimen/_20ssp"
                />

            <TextView
                android:id="@+id/release_date_"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:text="@string/todo"
                android:textColor="@color/text_secondary"
                android:textSize="@dimen/_10ssp" />

            <TextView
                android:id="@+id/overview_text_"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_20ssp"
                android:gravity="center_vertical|left|start"
                android:textColor="@color/text_secondary"
                android:textSize="@dimen/_15ssp" />

            <View
                android:id="@+id/view1"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_10sdp"
                android:background="@color/black_transparent" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/_5ssp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/_10sdp"
                    android:text="@string/cast_detail"
                    android:textColor="@color/text_primary"
                    android:textSize="@dimen/_15ssp"
                    android:textStyle="bold" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_cast"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </LinearLayout>

    </androidx.core.widget.NestedScrollView>


</RelativeLayout>