<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".fragment.MainFragment"
   >

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@android:color/transparent"
        android:translationZ="@dimen/_100sdp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:background="@android:color/transparent"
            android:gravity="center"
            android:paddingHorizontal="@dimen/_8sdp"
            app:layout_scrollFlags="noScroll">

            <ImageView
                android:layout_width="@dimen/_38sdp"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:src="@drawable/ic_launcher_foreground" />

            <TextView
                android:id="@+id/tv_shows_text"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/_2sdp"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:paddingTop="@dimen/_4sdp"
                android:paddingBottom="@dimen/_4sdp"
                android:text="@string/app_name"
                android:fontFamily="@font/chrusty"
                android:gravity="center_vertical"
                android:textColor="@color/text_primary" />
            <ImageView
                android:id="@+id/search_view"
                android:layout_width="@dimen/_38sdp"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:src="@android:drawable/ic_menu_search" />

        </LinearLayout>

    </com.google.android.material.appbar.AppBarLayout>
    <androidx.core.widget.NestedScrollView
        android:id="@+id/nested_sv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:fitsSystemWindows="false"
        android:focusable="true"
        android:focusableInTouchMode="true"
       >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/_30sdp"
                android:background="@drawable/gradient_up_dark_grey" />

            <com.denzcoskun.imageslider.ImageSlider
                android:id="@+id/image_slider"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_170sdp"
                app:iss_auto_cycle="true"
                app:iss_corner_radius="20"
                app:iss_delay="3000"
                app:iss_indicator_align="CENTER"
                app:iss_period="1000"
                app:iss_selected_dot="@drawable/default_selected_dot"
                app:iss_text_align="CENTER"
                app:iss_title_background="@drawable/gradient_bottom_dark_grey"
                app:iss_unselected_dot="@drawable/default_unselected_dot" />

            <TextView
                android:id="@+id/pm_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/dark_gray"
                android:padding="@dimen/_10sdp"
                android:text="@string/popular_movies"
                android:fontFamily="@font/chrusty"
                android:textColor="@android:color/holo_red_light"
                android:textSize="@dimen/_14ssp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/popular_rv"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_160sdp" />

            <TextView
                android:fontFamily="@font/chrusty"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/dark_gray"
                android:padding="@dimen/_10sdp"
                android:text="@string/popular_tv_show"
                android:textColor="@android:color/holo_red_light"
                android:textSize="@dimen/_14ssp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/tv_rv"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_160sdp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/dark_gray"
                android:padding="@dimen/_10sdp"
                android:text="@string/anime"
                android:fontFamily="@font/chrusty"
                android:textColor="@android:color/holo_red_light"
                android:textSize="@dimen/_14ssp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/anime_rv"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_160sdp" />


        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <RelativeLayout
        android:id="@+id/lottie_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:visibility="gone"
        >

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/lottie_layer_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:background="@color/black"
            app:lottie_autoPlay="true"
            app:lottie_rawRes="@raw/data" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/retry"
            style="@style/Widget.Material3.CardView.Outlined"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAllCaps="false"
            android:layout_alignParentBottom="true"
            android:layout_centerInParent="true"
            android:layout_margin="@dimen/_20ssp"
            android:text="@string/retry"
            android:textColor="@color/white"
            app:iconGravity="start"
            app:icon="@android:drawable/ic_popup_sync"
            />
    </RelativeLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>